# OddSIDKick-pico2

./: CMakeLists.txt  Makefile  add_build_files.sh  patch_midi_input.sh  patch_oddsid_serial.sh
Source/: SKpico.c  midi_sid.c  midi_sid.h  oddsid_stubs.c  tusb_config.h  usb_descriptors.c
Source/reSID16/: filter.h
